fix hero spacings

--- a/assets/sass/_theme/design-system/hero.sass
+++ b/assets/sass/_theme/design-system/hero.sass
@@ -4,11 +4,11 @@
     // Fallback color
     background-color: $hero-background-color
     color: $hero-color
+    margin-bottom: $spacing-3
     min-height: $hero-height
-    padding-bottom: var(--grid-gutter)
+    padding-bottom: $spacing-3
     padding-top: var(--header-height)
     position: relative
-    margin-bottom: var(--grid-gutter)
     @include media-breakpoint-up(desktop)
         min-height: $hero-height-desktop
     *:focus-visible
